--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -45,3 +45,13 @@ img {
 
 /* -------- LOADING ---------- */
 @import url("./loading.css");
+
+/* -------- Header ---------- */
+@import url("./header.css");
+
+/* -------- Avatar ---------- */
+@import url("./avatar.css");
+
+
+
+
