--- a/client/src/styles/header.css
+++ b/client/src/styles/header.css
@@ -23,9 +23,9 @@
 } 
 
 /* ----------- Header Menu ---------- */
-.header .menu li{
+/* .header .menu li{
     opacity: 0.5;
-}
+} */
 .header .menu li.active{
   
     opacity: 1;
@@ -77,7 +77,7 @@
     pointer-events: none;
 }
 .header .search_form .search_icon .material-icons{
-    font-size: 14px;
+    font-size: 18px;
     transform: translateY(3px);
 }
 .header .search_form .close_search{
